--- a/JENKINSFILE
+++ b/JENKINSFILE
@@ -93,11 +93,15 @@ pipeline {
                 sh '''
                     cd todo-list-aws-config
                     sam build
+                    # Selección dinámica del archivo de configuración SAM
                     if [ "$ENV" = "production" ]; then
-                        sam deploy --config-file samconfig.production.toml --config-env $ENV --no-confirm-changeset --no-fail-on-empty-changeset || true
+                        SAMCONFIG_FILE="--config-file samconfig.production.toml"
+                    elif [ "$ENV" = "staging" ]; then
+                        SAMCONFIG_FILE="--config-file samconfig.staging.toml"
                     else
-                        sam deploy --config-env $ENV --no-confirm-changeset --no-fail-on-empty-changeset || true
+                        SAMCONFIG_FILE=""
                     fi
+                    sam deploy $SAMCONFIG_FILE --config-env $ENV --no-confirm-changeset --no-fail-on-empty-changeset || true
                     # Obtener la URL del API Gateway del output de CloudFormation
                     if [ "$ENV" = "production" ]; then
                         STACK_NAME=todo-list-aws-production
